It's done without presentation

--- a/src/WebApi/SurveyApp.WebApi/appsettings.json
+++ b/src/WebApi/SurveyApp.WebApi/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "db": "Data Source=(localdb)\\Mssqllocaldb;Initial Catalog=SurveyCatalog;Integrated Security=True"
+  },
+  "Jwt": {
+    "Issuer": "example.com",
+    "Audience": "example.com",
+    "Key":  "ThISisOuRKEY!0325"
   }
 }
