--- a/src/WebApi/SurveyApp.WebApi/appsettings.Development.json
+++ b/src/WebApi/SurveyApp.WebApi/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "db": "Data Source=(localdb)\\Mssqllocaldb;Initial Catalog=SurveyCatalog;Integrated Security=True"
+  },
+  "Jwt": {
+    "Issuer": "example.com",
+    "Audience": "example.com",
+    "Key": "ThISisOuRKEY!0325"
   }
 }
